--- a/style.css
+++ b/style.css
@@ -35,12 +35,16 @@ body {
 body {
   font-family: 'Ubuntu', sans-serif;
   font-weight: 300;
-  margin: 0 auto;
-  padding: 20px 0;
-  max-width: 1200px;
+  margin: 0;
   background-color: var(--background-color);
   color: var(--text-color);
   font-size: 0.9em;
+}
+
+main {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
 section,
@@ -52,12 +56,12 @@ textarea {
 }
 
 @supports (padding: env(safe-area-inset-top)) {
-  body {
+  main {
     padding:
       calc(env(safe-area-inset-top) + 20px)
-      env(safe-area-inset-right)
+      calc(env(safe-area-inset-right) + 20px)
       calc(env(safe-area-inset-bottom) + 20px)
-      env(safe-area-inset-left);
+      calc(env(safe-area-inset-left) + 20px);
   }
 }
 
@@ -585,7 +589,7 @@ button:disabled {
 #topBar {
   position: sticky;
   top: 0;
-  padding: 5px 10px;
+  padding: 5px 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
