--- a/style.css
+++ b/style.css
@@ -375,10 +375,17 @@ body.hover-help-active * {
   display: flex;
   flex-direction: column;
   flex: 1;
+  min-width: 0; /* allow wrapper to shrink on narrow screens */
 }
 
 .select-wrapper .filter-input {
   display: none;
+}
+
+/* Prevent long option text from widening selects on mobile */
+.select-wrapper select {
+  width: 100%;
+  max-width: 100%;
 }
 
 .device-category .list-filter {
