--- a/style.css
+++ b/style.css
@@ -194,6 +194,7 @@ p {
 .form-row input {
   flex: 1;
   margin: 5px 5px 0 0;
+  min-width: 0; /* allow shrinking inside flex container */
 }
 
 @media (max-width: 600px) {
