--- a/style.css
+++ b/style.css
@@ -671,7 +671,7 @@ button:disabled {
   margin: 3px 0;
 }
 
-/* Setup diagram */
+/* Project diagram */
 #setupDiagram {
   text-align: center;
   min-height: 440px;
