--- a/style.css
+++ b/style.css
@@ -197,6 +197,9 @@ p {
   margin: 5px 5px 0 0;
   min-width: 0; /* allow shrinking inside flex container */
 }
+.form-row .range-separator {
+  margin: 0 5px;
+}
 
 @media (max-width: 600px) {
   .form-row {
