--- a/style.css
+++ b/style.css
@@ -755,9 +755,10 @@ button:disabled {
 }
 
 .scenario-summary {
-  margin-top: 4px;
-  display: flex;
-  flex-wrap: wrap;
+    margin-top: 4px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 .connector-block,
