--- a/style.css
+++ b/style.css
@@ -197,6 +197,9 @@ p {
   margin: 5px 5px 0 0;
   min-width: 0; /* allow shrinking inside flex container */
 }
+.form-row .range-separator {
+  margin: 0 5px;
+}
 
 @media (max-width: 600px) {
   .form-row {
@@ -210,6 +213,9 @@ p {
   }
   .form-row select,
   .form-row input {
+    margin: 5px 0 0 0;
+  }
+  .form-row .select-wrapper {
     margin: 5px 0 0 0;
   }
 }
@@ -375,6 +381,7 @@ body.hover-help-active * {
   flex: 1;
   min-width: 0; /* allow wrapper to shrink on narrow screens */
   position: relative;
+  margin: 5px 5px 0 0;
 }
 
 /* Prevent long option text from widening selects on mobile */
